--- a/package.json
+++ b/package.json
@@ -33,14 +33,19 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
+    "@ericblade/quagga2": "^1.3.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-select/ng-select": "^5.0.9",
     "@types/googlemaps": "^3.39.6",
     "@types/jquery": "^3.3.38",
+    "@zxing/browser": "0.0.8",
+    "@zxing/library": "^0.18.4",
+    "@zxing/ngx-scanner": "^3.1.3",
     "angular-bootstrap-md": "^8.10.1",
     "angular-datatables": "^8.1.0",
     "angular-google-charts": "^1.1.6",
     "angular-popper": "^2.0.1",
+    "angularx-qrcode": "^11.0.0",
     "bootstrap": "^4.5.0",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.3",
@@ -55,6 +60,7 @@
     "ng-angular9-datatable": "^0.9.13",
     "ng-circle-progress": "^1.5.1",
     "ng2-charts": "^2.3.2",
+    "ngx-barcode-scanner": "^0.2.0",
     "ngx-mask": "^9.1.2",
     "ngx-mat-select-search": "^3.1.1",
     "ngx-material-timepicker": "^5.5.3",
