--- a/package.json
+++ b/package.json
@@ -20,54 +20,54 @@
     "@agm/core": "^1.1.0",
     "@angular-material-components/datetime-picker": "^2.0.4",
     "@angular-material-components/moment-adapter": "^4.0.1",
-    "@angular/animations": "^9.1.11",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.11",
-    "@angular/compiler": "~9.1.11",
-    "@angular/core": "~9.1.11",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
     "@angular/fire": "^5.4.2",
-    "@angular/forms": "~9.1.11",
-    "@angular/localize": "^9.1.11",
+    "@angular/forms": "^9.1.13",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^9.2.4",
-    "@angular/material-moment-adapter": "^11.0.1",
-    "@angular/platform-browser": "~9.1.11",
-    "@angular/platform-browser-dynamic": "~9.1.11",
-    "@angular/router": "~9.1.11",
-    "@ericblade/quagga2": "^1.3.1",
+    "@angular/material-moment-adapter": "^11.2.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@ericblade/quagga2": "^1.4.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
-    "@ng-select/ng-select": "^5.0.9",
-    "@types/googlemaps": "^3.39.6",
-    "@types/jquery": "^3.3.38",
+    "@ng-select/ng-select": "^5.1.0",
+    "@types/googlemaps": "^3.43.3",
+    "@types/jquery": "^3.5.6",
     "@zxing/browser": "0.0.8",
-    "@zxing/library": "^0.18.4",
-    "@zxing/ngx-scanner": "^3.1.3",
+    "@zxing/library": "^0.18.6",
+    "@zxing/ngx-scanner": "^3.2.0",
     "angular-bootstrap-md": "^8.10.1",
     "angular-datatables": "^8.1.0",
     "angular-google-charts": "^1.1.6",
     "angular-popper": "^2.0.1",
     "angular2-signaturepad": "^3.0.4",
     "angularx-qrcode": "^11.0.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.0",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.4",
-    "datatables.net": "^1.10.21",
-    "datatables.net-buttons": "^1.6.2",
-    "datatables.net-buttons-dt": "^1.6.2",
-    "datatables.net-dt": "^1.10.21",
-    "firebase": "^8.1.1",
+    "datatables.net": "^1.10.25",
+    "datatables.net-buttons": "^1.7.1",
+    "datatables.net-buttons-dt": "^1.7.1",
+    "datatables.net-dt": "^1.10.25",
+    "firebase": "^8.7.1",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.5.1",
-    "jszip": "^3.4.0",
-    "mat-select-filter": "^2.3.7",
+    "jquery": "^3.6.0",
+    "jszip": "^3.6.0",
+    "mat-select-filter": "^2.3.9",
     "ng-angular9-datatable": "^0.9.13",
-    "ng-circle-progress": "^1.5.1",
-    "ng2-charts": "^2.3.2",
+    "ng-circle-progress": "^1.6.0",
+    "ng2-charts": "^2.4.3",
     "ngx-barcode-scanner": "^0.2.0",
     "ngx-barcodeput": "^1.1.0",
-    "ngx-mask": "^9.1.2",
-    "ngx-mat-select-search": "^3.1.1",
+    "ngx-mask": "^9.1.4",
+    "ngx-mat-select-search": "^3.3.0",
     "ngx-material-timepicker": "^5.5.3",
-    "pdfmake": "^0.1.65",
+    "pdfmake": "^0.1.72",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "save": "^2.4.0",
@@ -76,30 +76,30 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.803.26",
-    "@angular-devkit/build-angular": "~0.901.9",
-    "@angular/cli": "^9.1.9",
-    "@angular/compiler-cli": "~9.1.11",
-    "@angular/language-service": "~9.1.11",
-    "@types/canvasjs": "^1.9.5",
-    "@types/datatables.net": "^1.10.19",
-    "@types/datatables.net-buttons": "^1.4.3",
-    "@types/hammerjs": "^2.0.39",
+    "@angular-devkit/architect": "^0.803.29",
+    "@angular-devkit/build-angular": "^0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
+    "@types/canvasjs": "^1.9.7",
+    "@types/datatables.net": "^1.10.20",
+    "@types/datatables.net-buttons": "^1.4.7",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.0.4",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^14.17.5",
     "codelyzer": "^5.1.2",
-    "firebase-tools": "^8.16.2",
+    "firebase-tools": "^8.20.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
-    "inquirer-autocomplete-prompt": "^1.0.2",
+    "inquirer-autocomplete-prompt": "^1.4.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
