--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
     "angular-bootstrap-md": "^8.10.1",
+    "angular-calendar": "^0.28.28",
     "angular-datatables": "^8.1.0",
     "angular-google-charts": "^1.1.6",
     "angular-popper": "^2.0.1",
     "angular2-signaturepad": "^3.0.4",
+    "angularx-flatpickr": "^6.6.0",
     "angularx-qrcode": "^11.0.0",
     "bootstrap": "^4.6.0",
     "canvasjs": "^1.8.3",
@@ -54,7 +56,9 @@
     "datatables.net-buttons": "^1.7.1",
     "datatables.net-buttons-dt": "^1.7.1",
     "datatables.net-dt": "^1.10.25",
+    "date-fns": "^2.16.1",
     "firebase": "^8.7.1",
+    "flatpickr": "^4.6.9",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
     "jszip": "^3.6.0",
