--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@zxing/library": "^0.18.6",
     "@zxing/ngx-scanner": "^3.2.0",
     "angular-bootstrap-md": "^8.10.1",
+    "angular-calendar": "^0.28.28",
     "angular-datatables": "^8.1.0",
     "angular-google-charts": "^1.1.6",
     "angular-popper": "^2.0.1",
@@ -54,6 +55,7 @@
     "datatables.net-buttons": "^1.7.1",
     "datatables.net-buttons-dt": "^1.7.1",
     "datatables.net-dt": "^1.10.25",
+    "date-fns": "^2.24.0",
     "firebase": "^8.7.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
