--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "fuzzy": "^0.1.3",
     "inquirer": "^6.5.2",
     "inquirer-autocomplete-prompt": "^1.4.0",
+    "intl": "^1.2.5",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.2.3",
