--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser-dynamic": "^9.1.13",
     "@angular/router": "^9.1.13",
     "@ericblade/quagga2": "^1.4.1",
+    "@ncstate/sat-popover": "^8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-select/ng-select": "^5.1.0",
     "@types/googlemaps": "^3.43.3",
@@ -53,16 +54,17 @@
     "bootstrap": "^4.6.0",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.4",
-    "datatables.net": "^1.10.25",
+    "datatables.net": "^1.11.3",
     "datatables.net-buttons": "^1.7.1",
     "datatables.net-buttons-dt": "^1.7.1",
-    "datatables.net-dt": "^1.10.25",
+    "datatables.net-dt": "^1.11.3",
     "date-fns": "^2.24.0",
+    "file-saver": "^2.0.5",
     "firebase": "^8.7.1",
     "flatpickr": "^4.6.9",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
-    "jszip": "^3.6.0",
+    "jszip": "^3.7.1",
     "macaddress": "^0.5.2",
     "mat-select-filter": "^2.3.9",
     "ng-angular9-datatable": "^0.9.13",
@@ -78,7 +80,7 @@
     "rxjs": "~6.5.5",
     "save": "^2.4.0",
     "tslib": "^1.14.1",
-    "xlsx": "^0.15.6",
+    "xlsx": "^0.17.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
