--- a/package.json
+++ b/package.json
@@ -92,14 +92,14 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "save": "^2.4.0",
-    "tslib": "^1.14.1",
+    "tslib": "^1.10.0",
     "xlsx": "^0.17.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.803.29",
-    "@angular-devkit/build-angular": "^0.901.15",
-    "@angular/cli": "^9.1.15",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "^13.2.6",
     "@angular/compiler-cli": "^9.1.13",
     "@angular/language-service": "^9.1.13",
     "@types/canvasjs": "^1.9.7",
@@ -108,7 +108,7 @@
     "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^14.17.5",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^8.20.0",
     "fuzzy": "^0.1.3",
