--- a/package.json
+++ b/package.json
@@ -72,8 +72,10 @@
     "flatpickr": "^4.6.10",
     "google-chart": "0.0.1-security",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.4.1",
     "ipware": "^2.0.0",
     "jquery": "^3.6.0",
+    "jspdf": "^2.5.1",
     "jszip": "^3.7.1",
     "mat-select-filter": "^2.4.1",
     "ng-angular9-datatable": "^0.9.13",
@@ -104,6 +106,7 @@
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.10",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "firebase-tools": "^8.20.0",
