--- a/package.json
+++ b/package.json
@@ -67,11 +67,13 @@
     "datatables.net-buttons-dt": "^1.7.1",
     "datatables.net-dt": "^1.11.5",
     "date-fns": "^2.28.0",
+    "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "firebase": "^8.10.1",
     "flatpickr": "^4.6.10",
     "google-chart": "0.0.1-security",
     "hammerjs": "^2.0.8",
+    "html-to-pdfmake": "^2.4.2",
     "html2canvas": "^1.4.1",
     "ipware": "^2.0.0",
     "jquery": "^3.6.0",
