--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "jspdf": "^2.5.1",
     "jszip": "^3.7.1",
     "mat-select-filter": "^2.4.1",
+    "mat-table-exporter": "^10.2.4",
     "ng-angular9-datatable": "^0.9.13",
     "ng-circle-progress": "^1.6.0",
     "ng2-charts": "^3.0.0-rc.7",
