--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "pdfmake": "^0.1.72",
     "rxjs": "~6.5.5",
     "save": "^2.4.0",
+    "timepicker.js": "^3.1.0",
     "tslib": "^1.10.0",
     "xlsx": "^0.17.5",
     "zone.js": "~0.10.2"
