--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@angular/platform-browser-dynamic": "^9.1.13",
     "@angular/router": "^9.1.13",
     "@ericblade/quagga2": "^1.6.0",
+    "@julianobrasil/timemask": "^1.1.2",
     "@ncstate/sat-popover": "^8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-select/ng-select": "^5.1.0",
@@ -89,6 +90,7 @@
     "ngx-bootstrap": "^8.0.0",
     "ngx-mask": "^9.1.4",
     "ngx-mat-select-search": "^3.3.3",
+    "ngx-mat-timepicker": "^14.0.2",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-trend": "^7.0.0",
