--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "datatables.net-dt": "^1.11.5",
     "date-fns": "^2.28.0",
     "dom-to-image": "^2.6.0",
+    "exceljs": "^1.12.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.10.1",
     "flatpickr": "^4.6.10",
@@ -111,6 +112,7 @@
     "@types/canvasjs": "^1.9.7",
     "@types/datatables.net": "^1.10.21",
     "@types/datatables.net-buttons": "^1.4.7",
+    "@types/file-saver": "^2.0.5",
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.10",
