--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ncstate/sat-popover": "^8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "@ng-select/ng-select": "^5.1.0",
+    "@ngneat/input-mask": "^6.0.0",
     "@types/googlemaps": "^3.43.3",
     "@types/jquery": "^3.5.14",
     "@zxing/browser": "0.0.8",
@@ -80,6 +81,7 @@
     "html2canvas": "^1.4.1",
     "ipware": "^2.0.0",
     "jquery": "^3.6.0",
+    "jsonc-parser": "^3.2.0",
     "jspdf": "^2.5.1",
     "jszip": "^3.7.1",
     "mat-select-filter": "^2.4.1",
